# airwaySkeleton_CGAL

./: README.md  skeleton.cpp
skeletonCPP/: CMakeLists.txt  sm-skeleton.cpp
